--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron fixed-top">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
@@ -90,6 +90,10 @@
                   var inputOutline = $("<input>");
                   inputOutline.addClass("form-control time-block").attr("placeholder", "No scheduled meetings").attr("id", "meetingName").attr("data-number", i);
                     if(hourIndicator == "present") {
+                      var presentLink = $("<a>");
+                      presentLink.attr("href", "#present-link")
+                      wrapperDiv.attr("id", "present-link");
+                      wrapperDiv.append(presentLink);
                       inputOutline.addClass("present");
                     }
 
